<resources>
    <string name="app_name">Kamal</string>
    <string name="title_activity_initiatives">Map</string>
    <string name="log_in_with">Iniciar con</string>
    <string name="or">Or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- Edit initiatives-->
    <string name="in_title">Titulo</string>
    <string name="in_name">Nombre</string>
    <string name="in_short_desc">Short Description</string>
    <string name="in_desc">Description</string>
    <string name="in_images">Images</string>
    <string name="in_where">Where</string>
    <string name="in_save">Save</string>
    <string name="in_hour">--:--</string>
    <string name="in_date">--/--/--</string>
    <!-- Navegation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- Facebook -->
    <string name="facebook_app_id">333536560434984</string>
    <string name="fb_login_protocol_scheme">fb333536560434984</string>
    <!-- drop list -->
    <string name="autentication_error">Fallo en la Autentificación.</string>
    <string name="no_internet">Sin Conexión a Internet.</string>
    <string-array name="Tipo_Iniciativa">
        <item>Teatro</item>
        <item>Música</item>
        <item>Deporte</item>
        <item>Comida</item>
    </string-array>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="Distancia_Notificacion">
        <item>500 metros</item>
        <item>3 kilómetros</item>
        <item>10 kilómetros</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD
    <string name="title_activity_tutorial">TutorialActivity</string>

=======
    <string name="title_activity_tutorial">Tutorial</string>
>>>>>>> nano

</resources>
