<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <EditText
        android:id="@+id/inNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_short_desc"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <EditText
        android:id="@+id/inShortDescInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_desc"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <EditText
        android:id="@+id/inDescInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_where"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_images"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>


    <Button
        android:id="@+id/faceLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_save"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</LinearLayout>